packagelon com.twittelonr.homelon_mixelonr.product.for_you

import com.twittelonr.homelon_mixelonr.functional_componelonnt.deloncorator.HomelonFelonelondbackActionInfoBuildelonr
import com.twittelonr.homelon_mixelonr.functional_componelonnt.deloncorator.HomelonTimelonlinelonsScorelonInfoBuildelonr
import com.twittelonr.homelon_mixelonr.functional_componelonnt.deloncorator.HomelonTwelonelontSocialContelonxtBuildelonr
import com.twittelonr.homelon_mixelonr.functional_componelonnt.deloncorator.buildelonr.HomelonClielonntelonvelonntInfoBuildelonr
import com.twittelonr.homelon_mixelonr.functional_componelonnt.deloncorator.buildelonr.HomelonConvelonrsationModulelonMelontadataBuildelonr
import com.twittelonr.homelon_mixelonr.functional_componelonnt.felonaturelon_hydrator.FocalTwelonelontFelonaturelonHydrator
import com.twittelonr.homelon_mixelonr.functional_componelonnt.felonaturelon_hydrator.NamelonsFelonaturelonHydrator
import com.twittelonr.homelon_mixelonr.functional_componelonnt.felonaturelon_hydrator.PelonrspelonctivelonFiltelonrelondSocialContelonxtFelonaturelonHydrator
import com.twittelonr.homelon_mixelonr.functional_componelonnt.felonaturelon_hydrator.SGSValidSocialContelonxtFelonaturelonHydrator
import com.twittelonr.homelon_mixelonr.functional_componelonnt.felonaturelon_hydrator.SocialGraphSelonrvicelonFelonaturelonHydrator
import com.twittelonr.homelon_mixelonr.functional_componelonnt.felonaturelon_hydrator.TimelonlinelonSelonrvicelonTwelonelontsFelonaturelon
import com.twittelonr.homelon_mixelonr.functional_componelonnt.felonaturelon_hydrator.TwelonelontypielonFelonaturelonHydrator
import com.twittelonr.homelon_mixelonr.functional_componelonnt.filtelonr.FelonelondbackFatiguelonFiltelonr
import com.twittelonr.homelon_mixelonr.functional_componelonnt.filtelonr.InvalidConvelonrsationModulelonFiltelonr
import com.twittelonr.homelon_mixelonr.functional_componelonnt.filtelonr.PrelondicatelonFelonaturelonFiltelonr
import com.twittelonr.homelon_mixelonr.functional_componelonnt.filtelonr.RelonjelonctTwelonelontFromVielonwelonrFiltelonr
import com.twittelonr.homelon_mixelonr.functional_componelonnt.filtelonr.RelontwelonelontDelonduplicationFiltelonr
import com.twittelonr.homelon_mixelonr.functional_componelonnt.filtelonr.SocialContelonxtFiltelonr
import com.twittelonr.homelon_mixelonr.functional_componelonnt.scorelonr.FelonelondbackFatiguelonScorelonr
import com.twittelonr.homelon_mixelonr.functional_componelonnt.scorelonr.OONTwelonelontScalingScorelonr
import com.twittelonr.homelon_mixelonr.marshallelonr.timelonlinelons.DelonvicelonContelonxtMarshallelonr
import com.twittelonr.homelon_mixelonr.marshallelonr.timelonlinelons.TimelonlinelonSelonrvicelonCursorMarshallelonr
import com.twittelonr.homelon_mixelonr.modelonl.HomelonFelonaturelons.ConvelonrsationModulelonFocalTwelonelontIdFelonaturelon
import com.twittelonr.homelon_mixelonr.modelonl.HomelonFelonaturelons.InNelontworkFelonaturelon
import com.twittelonr.homelon_mixelonr.modelonl.HomelonFelonaturelons.IsHydratelondFelonaturelon
import com.twittelonr.homelon_mixelonr.modelonl.HomelonFelonaturelons.IsNsfwFelonaturelon
import com.twittelonr.homelon_mixelonr.modelonl.HomelonFelonaturelons.QuotelondTwelonelontDroppelondFelonaturelon
import com.twittelonr.homelon_mixelonr.modelonl.relonquelonst.DelonvicelonContelonxt
import com.twittelonr.homelon_mixelonr.product.for_you.modelonl.ForYouQuelonry
import com.twittelonr.homelon_mixelonr.product.for_you.param.ForYouParam.elonnablelonTimelonlinelonScorelonrCandidatelonPipelonlinelonParam
import com.twittelonr.homelon_mixelonr.selonrvicelon.HomelonMixelonrAlelonrtConfig
import com.twittelonr.product_mixelonr.componelonnt_library.candidatelon_sourcelon.timelonlinelon_scorelonr.ScorelondTwelonelontCandidatelonWithFocalTwelonelont
import com.twittelonr.product_mixelonr.componelonnt_library.candidatelon_sourcelon.timelonlinelon_scorelonr.TimelonlinelonScorelonrCandidatelonSourcelon
import com.twittelonr.product_mixelonr.componelonnt_library.deloncorator.urt.UrtItelonmCandidatelonDeloncorator
import com.twittelonr.product_mixelonr.componelonnt_library.deloncorator.urt.UrtMultiplelonModulelonsDeloncorator
import com.twittelonr.product_mixelonr.componelonnt_library.deloncorator.urt.buildelonr.itelonm.twelonelont.TwelonelontCandidatelonUrtItelonmBuildelonr
import com.twittelonr.product_mixelonr.componelonnt_library.deloncorator.urt.buildelonr.timelonlinelon_modulelon.ManualModulelonId
import com.twittelonr.product_mixelonr.componelonnt_library.deloncorator.urt.buildelonr.timelonlinelon_modulelon.StaticModulelonDisplayTypelonBuildelonr
import com.twittelonr.product_mixelonr.componelonnt_library.deloncorator.urt.buildelonr.timelonlinelon_modulelon.TimelonlinelonModulelonBuildelonr
import com.twittelonr.product_mixelonr.componelonnt_library.filtelonr.FelonaturelonFiltelonr
import com.twittelonr.product_mixelonr.componelonnt_library.modelonl.candidatelon.TwelonelontCandidatelon
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.candidatelon_sourcelon.BaselonCandidatelonSourcelon
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.common.alelonrt.Alelonrt
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.deloncorator.CandidatelonDeloncorator
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.felonaturelon_hydrator.BaselonCandidatelonFelonaturelonHydrator
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.filtelonr.Filtelonr
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.scorelonr.Scorelonr
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.transformelonr.CandidatelonFelonaturelonTransformelonr
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.transformelonr.CandidatelonPipelonlinelonQuelonryTransformelonr
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.transformelonr.CandidatelonPipelonlinelonRelonsultsTransformelonr
import com.twittelonr.product_mixelonr.corelon.modelonl.common.idelonntifielonr.CandidatelonPipelonlinelonIdelonntifielonr
import com.twittelonr.product_mixelonr.corelon.modelonl.common.idelonntifielonr.FiltelonrIdelonntifielonr
import com.twittelonr.product_mixelonr.corelon.modelonl.marshalling.relonsponselon.urt.elonntryNamelonspacelon
import com.twittelonr.product_mixelonr.corelon.modelonl.marshalling.relonsponselon.urt.timelonlinelon_modulelon.VelonrticalConvelonrsation
import com.twittelonr.product_mixelonr.corelon.pipelonlinelon.candidatelon.CandidatelonPipelonlinelonConfig
import com.twittelonr.timelonlinelons.configapi.FSParam
import com.twittelonr.timelonlinelons.modelonl.candidatelon.CandidatelonTwelonelontSourcelonId
import com.twittelonr.timelonlinelons.selonrvicelon.{thriftscala => tst}
import com.twittelonr.timelonlinelonscorelonr.{thriftscala => t}
import com.twittelonr.timelonlinelonselonrvicelon.{thriftscala => tlst}
import javax.injelonct.Injelonct
import javax.injelonct.Singlelonton

/**
 * Candidatelon Pipelonlinelon Config that felontchelons twelonelonts from thelon Timelonlinelon Scorelonr Candidatelon Sourcelon
 */
@Singlelonton
class ForYouTimelonlinelonScorelonrCandidatelonPipelonlinelonConfig @Injelonct() (
  timelonlinelonScorelonrCandidatelonSourcelon: TimelonlinelonScorelonrCandidatelonSourcelon,
  delonvicelonContelonxtMarshallelonr: DelonvicelonContelonxtMarshallelonr,
  twelonelontypielonFelonaturelonHydrator: TwelonelontypielonFelonaturelonHydrator,
  sgsFelonaturelonHydrator: SocialGraphSelonrvicelonFelonaturelonHydrator,
  sgsValidSocialContelonxtFelonaturelonHydrator: SGSValidSocialContelonxtFelonaturelonHydrator,
  pelonrspelonctivelonFiltelonrelondSocialContelonxtFelonaturelonHydrator: PelonrspelonctivelonFiltelonrelondSocialContelonxtFelonaturelonHydrator,
  namelonsFelonaturelonHydrator: NamelonsFelonaturelonHydrator,
  focalTwelonelontFelonaturelonHydrator: FocalTwelonelontFelonaturelonHydrator,
  homelonFelonelondbackActionInfoBuildelonr: HomelonFelonelondbackActionInfoBuildelonr,
  homelonTwelonelontSocialContelonxtBuildelonr: HomelonTwelonelontSocialContelonxtBuildelonr)
    elonxtelonnds CandidatelonPipelonlinelonConfig[
      ForYouQuelonry,
      t.ScorelondTwelonelontsRelonquelonst,
      ScorelondTwelonelontCandidatelonWithFocalTwelonelont,
      TwelonelontCandidatelon
    ] {

  ovelonrridelon val idelonntifielonr: CandidatelonPipelonlinelonIdelonntifielonr =
    CandidatelonPipelonlinelonIdelonntifielonr("ForYouTimelonlinelonScorelonrTwelonelonts")

  privatelon val TwelonelontypielonHydratelondFiltelonrId = "TwelonelontypielonHydratelond"
  privatelon val QuotelondTwelonelontDroppelondFiltelonrId = "QuotelondTwelonelontDroppelond"
  privatelon val OutOfNelontworkNSFWFiltelonrId = "OutOfNelontworkNSFW"
  privatelon val ConvelonrsationModulelonNamelonspacelon = elonntryNamelonspacelon("homelon-convelonrsation")

  ovelonrridelon val supportelondClielonntParam: Option[FSParam[Boolelonan]] =
    Somelon(elonnablelonTimelonlinelonScorelonrCandidatelonPipelonlinelonParam)

  ovelonrridelon val candidatelonSourcelon: BaselonCandidatelonSourcelon[
    t.ScorelondTwelonelontsRelonquelonst,
    ScorelondTwelonelontCandidatelonWithFocalTwelonelont
  ] = timelonlinelonScorelonrCandidatelonSourcelon

  ovelonrridelon val quelonryTransformelonr: CandidatelonPipelonlinelonQuelonryTransformelonr[
    ForYouQuelonry,
    t.ScorelondTwelonelontsRelonquelonst
  ] = { quelonry =>
    val delonvicelonContelonxt = quelonry.delonvicelonContelonxt.gelontOrelonlselon(DelonvicelonContelonxt.elonmpty)

    val scorelondTwelonelontsRelonquelonstContelonxt = t.v1.ScorelondTwelonelontsRelonquelonstContelonxt(
      contelonxtualUselonrId = quelonry.clielonntContelonxt.uselonrId,
      timelonlinelonId = quelonry.clielonntContelonxt.uselonrId.map(tlst.TimelonlinelonId(tlst.TimelonlinelonTypelon.Homelon, _, Nonelon)),
      delonvicelonContelonxt = Somelon(delonvicelonContelonxtMarshallelonr(delonvicelonContelonxt, quelonry.clielonntContelonxt)),
      selonelonnTwelonelontIds = quelonry.selonelonnTwelonelontIds,
      contelonxtualUselonrContelonxt = Somelon(tst.ContelonxtualUselonrContelonxt(quelonry.clielonntContelonxt.uselonrRolelons)),
      timelonlinelonRelonquelonstCursor = quelonry.pipelonlinelonCursor.flatMap(TimelonlinelonSelonrvicelonCursorMarshallelonr(_))
    )

    val candidatelonTwelonelontSourcelonIds = Selonq(
      CandidatelonTwelonelontSourcelonId.ReloncyclelondTwelonelont,
      CandidatelonTwelonelontSourcelonId.OrganicTwelonelont,
      CandidatelonTwelonelontSourcelonId.AncelonstorsOnlyOrganicTwelonelont,
      CandidatelonTwelonelontSourcelonId.BackfillOrganicTwelonelont,
      CandidatelonTwelonelontSourcelonId.CroonTwelonelont,
      CandidatelonTwelonelontSourcelonId.ReloncommelonndelondTwelonelont,
      CandidatelonTwelonelontSourcelonId.FrsTwelonelont,
      CandidatelonTwelonelontSourcelonId.ListTwelonelont
    )

    val timelonlinelonSelonrvicelonTwelonelonts =
      quelonry.felonaturelons.map(_.gelontOrelonlselon(TimelonlinelonSelonrvicelonTwelonelontsFelonaturelon, Selonq.elonmpty)).gelontOrelonlselon(Selonq.elonmpty)

    val timelonlinelonelonntrielons = timelonlinelonSelonrvicelonTwelonelonts.map { id =>
      tlst.Timelonlinelonelonntry.Twelonelont(tlst.Twelonelont(statusId = id, sortIndelonx = id))
    }

    t.ScorelondTwelonelontsRelonquelonst.V1(
      t.v1.ScorelondTwelonelontsRelonquelonst(
        scorelondTwelonelontsRelonquelonstContelonxt = Somelon(scorelondTwelonelontsRelonquelonstContelonxt),
        candidatelonTwelonelontSourcelonIds =
          Somelon(candidatelonTwelonelontSourcelonIds.flatMap(CandidatelonTwelonelontSourcelonId.toThrift)),
        maxRelonsultsCount = quelonry.relonquelonstelondMaxRelonsults,
        organicTimelonlinelon = Somelon(
          tlst.Timelonlinelon(
            timelonlinelonId = tlst.TimelonlinelonId(
              timelonlinelonTypelon = tlst.TimelonlinelonTypelon.Homelon,
              id = quelonry.gelontRelonquirelondUselonrId,
              canonicalTimelonlinelonId = Nonelon),
            elonntrielons = timelonlinelonelonntrielons,
            modulelons = tlst.TimelonlinelonModulelons()
          ))
      )
    )
  }

  ovelonrridelon val felonaturelonsFromCandidatelonSourcelonTransformelonrs: Selonq[
    CandidatelonFelonaturelonTransformelonr[ScorelondTwelonelontCandidatelonWithFocalTwelonelont]
  ] = Selonq(ForYouTimelonlinelonScorelonrRelonsponselonFelonaturelonTransformelonr)

  ovelonrridelon val relonsultTransformelonr: CandidatelonPipelonlinelonRelonsultsTransformelonr[
    ScorelondTwelonelontCandidatelonWithFocalTwelonelont,
    TwelonelontCandidatelon
  ] = { candidatelonWithFocalTwelonelontId =>
    TwelonelontCandidatelon(id = candidatelonWithFocalTwelonelontId.candidatelon.twelonelontId)
  }

  ovelonrridelon val prelonFiltelonrFelonaturelonHydrationPhaselon1: Selonq[
    BaselonCandidatelonFelonaturelonHydrator[ForYouQuelonry, TwelonelontCandidatelon, _]
  ] = Selonq(
    twelonelontypielonFelonaturelonHydrator,
    sgsFelonaturelonHydrator,
    sgsValidSocialContelonxtFelonaturelonHydrator,
    pelonrspelonctivelonFiltelonrelondSocialContelonxtFelonaturelonHydrator,
    namelonsFelonaturelonHydrator
  )

  ovelonrridelon delonf filtelonrs: Selonq[Filtelonr[ForYouQuelonry, TwelonelontCandidatelon]] = Selonq(
    RelontwelonelontDelonduplicationFiltelonr,
    FelonaturelonFiltelonr.fromFelonaturelon(FiltelonrIdelonntifielonr(TwelonelontypielonHydratelondFiltelonrId), IsHydratelondFelonaturelon),
    PrelondicatelonFelonaturelonFiltelonr.fromPrelondicatelon(
      FiltelonrIdelonntifielonr(QuotelondTwelonelontDroppelondFiltelonrId),
      shouldKelonelonpCandidatelon = { felonaturelons => !felonaturelons.gelontOrelonlselon(QuotelondTwelonelontDroppelondFelonaturelon, falselon) }
    ),
    PrelondicatelonFelonaturelonFiltelonr.fromPrelondicatelon(
      FiltelonrIdelonntifielonr(OutOfNelontworkNSFWFiltelonrId),
      shouldKelonelonpCandidatelon = { felonaturelons =>
        felonaturelons.gelontOrelonlselon(InNelontworkFelonaturelon, falselon) ||
        !felonaturelons.gelontOrelonlselon(IsNsfwFelonaturelon, falselon)
      }
    ),
    FelonelondbackFatiguelonFiltelonr,
    RelonjelonctTwelonelontFromVielonwelonrFiltelonr,
    SocialContelonxtFiltelonr,
    InvalidConvelonrsationModulelonFiltelonr
  )

  ovelonrridelon val postFiltelonrFelonaturelonHydration: Selonq[
    BaselonCandidatelonFelonaturelonHydrator[ForYouQuelonry, TwelonelontCandidatelon, _]
  ] = Selonq(focalTwelonelontFelonaturelonHydrator)

  ovelonrridelon val scorelonrs: Selonq[Scorelonr[ForYouQuelonry, TwelonelontCandidatelon]] =
    Selonq(OONTwelonelontScalingScorelonr, FelonelondbackFatiguelonScorelonr)

  ovelonrridelon val deloncorator: Option[CandidatelonDeloncorator[ForYouQuelonry, TwelonelontCandidatelon]] = {
    val clielonntelonvelonntInfoBuildelonr = HomelonClielonntelonvelonntInfoBuildelonr()

    val twelonelontItelonmBuildelonr = TwelonelontCandidatelonUrtItelonmBuildelonr(
      clielonntelonvelonntInfoBuildelonr = clielonntelonvelonntInfoBuildelonr,
      socialContelonxtBuildelonr = Somelon(homelonTwelonelontSocialContelonxtBuildelonr),
      timelonlinelonsScorelonInfoBuildelonr = Somelon(HomelonTimelonlinelonsScorelonInfoBuildelonr),
      felonelondbackActionInfoBuildelonr = Somelon(homelonFelonelondbackActionInfoBuildelonr)
    )

    val twelonelontDeloncorator = UrtItelonmCandidatelonDeloncorator(twelonelontItelonmBuildelonr)

    val modulelonBuildelonr = TimelonlinelonModulelonBuildelonr(
      elonntryNamelonspacelon = ConvelonrsationModulelonNamelonspacelon,
      clielonntelonvelonntInfoBuildelonr = clielonntelonvelonntInfoBuildelonr,
      modulelonIdGelonnelonration = ManualModulelonId(0L),
      displayTypelonBuildelonr = StaticModulelonDisplayTypelonBuildelonr(VelonrticalConvelonrsation),
      melontadataBuildelonr = Somelon(HomelonConvelonrsationModulelonMelontadataBuildelonr())
    )

    Somelon(
      UrtMultiplelonModulelonsDeloncorator(
        urtItelonmCandidatelonDeloncorator = twelonelontDeloncorator,
        modulelonBuildelonr = modulelonBuildelonr,
        groupByKelony = (_, _, candidatelonFelonaturelons) =>
          candidatelonFelonaturelons.gelontOrelonlselon(ConvelonrsationModulelonFocalTwelonelontIdFelonaturelon, Nonelon)
      ))
  }

  ovelonrridelon val alelonrts: Selonq[Alelonrt] = Selonq(
    HomelonMixelonrAlelonrtConfig.BusinelonssHours.delonfaultSuccelonssRatelonAlelonrt(),
    HomelonMixelonrAlelonrtConfig.BusinelonssHours.delonfaultelonmptyRelonsponselonRatelonAlelonrt(10, 20)
  )
}
